--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.6.0
 Django==4.1.7
+django-cors-headers==3.14.0
 djangorestframework==3.14.0
+Pillow==9.5.0
 python-decouple==3.7
 pytz==2022.7.1
 sqlparse==0.4.3
